--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
-  "name": "neva",
-  "version": "1.0.0",
-  "description": "node sys evaluator",
-  "main": "index.js",
+  "name": "nevaclient",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "webpack-dev-server"
+    "serve": "vue-cli-service serve --open",
+    "build": "vue-cli-service build"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "typescript": "^2.8.3"
+    "vue": "^2.5.16",
+    "vue-class-component": "^6.0.0",
+    "vue-property-decorator": "^6.0.0",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "babel-loader": "^7.1.4",
-    "progress-bar-webpack-plugin": "^1.11.0",
-    "raw-loader": "^0.5.1",
-    "ts-loader": "^4.2.0",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.15",
-    "webpack-dev-server": "^3.1.3"
-  }
+    "@vue/cli-plugin-babel": "^3.0.0-beta.9",
+    "@vue/cli-plugin-typescript": "^3.0.0-beta.9",
+    "@vue/cli-service": "^3.0.0-beta.9",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
+    "vue-template-compiler": "^2.5.13"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
