--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,32 @@
 {
-    "compilerOptions": {
-        "target": "esnext",
-        "noImplicitAny": false,
-        "module": "commonjs",
-        "lib": [
-            "esnext",
-            "dom"
-        ]
-    },
-    "include": [
-        "./src/**/*.ts"
-    ],
-    "exclude": [
-        "build",
-        "node_modules"
-    ]
+  "compilerOptions": {
+    "target": "esnext",
+    "module": "esnext",
+    // "strict": true,
+    "jsx": "preserve",
+    "moduleResolution": "node",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "allowSyntheticDefaultImports": true,
+    "noImplicitAny": false,
+    "sourceMap": true,
+    "baseUrl": ".",
+    "types": [
+      "node"    ],
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    }
+  },
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "tests/**/*.ts",
+    "tests/**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
